=======================================
 Release notes for PyTables 2.1 series
=======================================

:Author: Francesc Altet i Abad
:Contact: faltet@carabos.com
:Author: Ivan Vilata i Balaguer
:Contact: ivilata@carabos.com


Changes from 2.0.x to 2.1b2
===========================

[API change] Table.willQueryUseIndexing() has changed its return value by a
frozen set of usable indexed columns for its `condition` parameter.



----

  **Enjoy data!**

  -- The PyTables Team


.. Local Variables:
.. mode: rst
.. coding: utf-8
.. fill-column: 78
.. End: